--- a/test/index.html
+++ b/test/index.html
@@ -8,15 +8,15 @@
     <link href="assets/qunit.css" rel="stylesheet"/>
   </head>
   <body>
-    <div style="width: 0; height: 0; overflow: hidden">
-      <section>
+    <div id="page" style="width: 0; height: 0; overflow: hidden">
+      <section id="section1">
         <ul id="links">
           <li><a name="a" href="/a.html">Test A</a></li>
           <li><a name="b" href="/b.html">Test B</a></li>
         </ul>
       </section>
-      <section>
-        <div class="wrapper">
+      <section id="section2">
+        <div id="wrapper" class="wrapper">
           <ul>
             <li><a name="a" href="/a.html">Wrapper test A</a></li>
             <li id="list_item"><a href="/b.html">Wrapper test B</a></li>
@@ -27,16 +27,44 @@
     </div>
     <div id="qunit"></div>
     <script type="text/javascript">
+
+      var section1 = document.getElementById('section1'),
+          section2 = document.getElementById('section2'),
+          wrapper = document.getElementById('wrapper'),
+          links = document.getElementById('links'),
+          list_item = document.getElementById('list_item');
+
+      function assert_equal(exp, act, msg) {
+        equal(eval(act), eval(exp), msg || (act + ' == ' + exp))
+      };
+
       test("indexOf", function() {
-        equal(B.indexOf(1, [1, 2, 3, 4]), 0, "B.indexOf(1, [1, 2, 3, 4]) == 0");
-        equal(B.indexOf(3, [1, 2, 3, 4]), 2, "B.indexOf(3, [1, 2, 3, 4]) == 2");
-        equal(B.indexOf(4, [1, 2, 3, 4]), 3, "B.indexOf(4, [1, 2, 3, 4]) == 3");
-        equal(B.indexOf(5, [1, 2, 3, 4]), -1, "B.indexOf(5, [1, 2, 3, 4]) == -1");
+        assert_equal( "0", "B.indexOf(1, [1, 2, 3, 4])");
+        assert_equal( "2", "B.indexOf(3, [1, 2, 3, 4])");
+        assert_equal( "3", "B.indexOf(4, [1, 2, 3, 4])");
+        assert_equal("-1", "B.indexOf(5, [1, 2, 3, 4])");
       });
+
       test("closest", function() {
-        var links = document.getElementById('links'), list_item = document.getElementById('list_item');
-        equal(B.closest('ul', links), links, "B.closest('ul', links) == links");
+        assert_equal("links", "B.closest('ul', links)");
+        assert_equal("section1", "B.closest('section', links)");
+        assert_equal("section2", "B.closest('section', list_item)");
+        assert_equal("wrapper", "B.closest('.wrapper', list_item)");
+        assert_equal("undefined", "B.closest('.wrapper', links)");
+        assert_equal("undefined", "B.closest('foo', links)");
       });
+
+      test("find", function() {
+        assert_equal("1", "B('#page').length");
+        assert_equal("2", "B.find('section').length");
+        assert_equal("2", "B.find('html body section').length");
+        assert_equal("2", "B.find('#page section').length");
+        assert_equal("0", "B.find('#page foo').length");
+        assert_equal("links", "B.find('ul', section1)[0]");
+        assert_equal("undefined", "B.find('.wrapper', section1)[0]");
+        assert_equal("wrapper", "B.find('.wrapper', section2)[0]");
+      });
+
     </script>
   </body>
 </html>
