Adjusting title and subtitle

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,7 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
+      <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
@@ -29,8 +29,8 @@
       <section>
 
         <div id="title">
-          <h1>bytes.js</h1>
-          <p>A lightweight Javascript library for simple DOM traversing and event binding written in a few bytes</p>
+          <h1>B(ytes.js)</h1>
+          <p>A lightweight Javascript library for DOM traversing and event binding<br>written in a fair amount of bytes</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://twitter.com/archan937">archan937</a></span>
           <span class="credits right">Theme designed by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
